// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> when logged in renders <Note /> and <NoteDetails /> only when a Note is selcted renders shows an placeholder as long as there is no note selected snapshot test 1`] = `
<div
  className="App"
>
  <Header
    positionInGrid="header"
  />
  <React.Fragment>
    <div
      className="App-note-options pr-5"
    >
      <ListOptions />
      <List
        notes={
          Array [
            Object {
              "body": "This is my body",
              "bodyEncrypted": "SECRET",
              "bodyPersistedVersion": "This is my body",
              "createdAt": 2018-02-04T11:28:24.000Z,
              "id": "109156be-c4fb-41ea-b1b4-efe1671c5836",
              "title": "Hello",
              "updatedAt": 2018-02-04T11:28:24.000Z,
            },
            Object {
              "body": "Another body",
              "bodyEncrypted": "SECRET2",
              "bodyPersistedVersion": "Another body",
              "createdAt": 2018-02-04T11:28:24.000Z,
              "id": "209156be-c4fb-41ea-b1b4-efe1671c5836",
              "title": "Another note",
              "updatedAt": 2018-02-04T11:28:24.000Z,
            },
          ]
        }
      />
    </div>
    <div
      className="App-note-section font-hint bg-light mb-3 d-flex justify-content-center align-items-center"
    >
      Currently no note selected.
    </div>
  </React.Fragment>
  <Footer />
</div>
`;

exports[`<App /> when logged in renders <Note /> and <NoteDetails /> only when a Note is selcted renders shows an placeholder as long as there is no note selected snapshot test 2`] = `
<div
  className="App"
>
  <Header
    positionInGrid="header"
  />
  <React.Fragment>
    <div
      className="App-note-options pr-5"
    >
      <ListOptions />
      <List
        notes={
          Array [
            Object {
              "body": "This is my body",
              "bodyEncrypted": "SECRET",
              "bodyPersistedVersion": "This is my body",
              "createdAt": 2018-02-04T11:28:24.000Z,
              "id": "109156be-c4fb-41ea-b1b4-efe1671c5836",
              "title": "Hello",
              "updatedAt": 2018-02-04T11:28:24.000Z,
            },
            Object {
              "body": "Another body",
              "bodyEncrypted": "SECRET2",
              "bodyPersistedVersion": "Another body",
              "createdAt": 2018-02-04T11:28:24.000Z,
              "id": "209156be-c4fb-41ea-b1b4-efe1671c5836",
              "title": "Another note",
              "updatedAt": 2018-02-04T11:28:24.000Z,
            },
          ]
        }
      />
    </div>
    <div
      className="App-note-section border p-5 mb-3"
    >
      <LockButton
        currentNote={
          Object {
            "body": "This is my body",
            "bodyEncrypted": "SECRET",
            "bodyPersistedVersion": "This is my body",
            "createdAt": 2018-02-04T11:28:24.000Z,
            "id": "109156be-c4fb-41ea-b1b4-efe1671c5836",
            "title": "Hello",
            "updatedAt": 2018-02-04T11:28:24.000Z,
          }
        }
      />
      <NoteDetails />
      <Note />
    </div>
  </React.Fragment>
  <Footer />
</div>
`;

exports[`<App /> when not logged in snapshot test 1`] = `
<div
  className="App"
>
  <Header
    positionInGrid="header"
  />
  <div
    className="App-login-notice"
  >
    You're not logged in
  </div>
  <Footer />
</div>
`;
